--- a/froooty/app/src/index.scss
+++ b/froooty/app/src/index.scss
@@ -1,8 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700&display=swap");
+
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -12,7 +11,8 @@ code {
         monospace;
 }
 
-$primary: #1ab9ce;
+$font-family-sans-serif: "Source Sans Pro", sans-serif;
+$primary: #1232a0;
 
 // Import Bootstrap and its default variables
 @import "~bootstrap/scss/bootstrap.scss";
